kubernetes-gitops/argocd_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-http
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirection: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.homelab.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
           name: argocd-server
           port:
              name: https
